# drift_tidy_robot

./: .gitignore  LICENSE  README.md  requirements.txt
docs/: APPROACH.md
drift_ws/: .gitignore
drift_ws/drift_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
drift_ws/drift_ws/install/drift_robot/lib/drift_robot/: dummy_camera.py
drift_ws/drift_ws/install/drift_robot/share/drift_robot/: package.dsv  package.sh  package.zsh
drift_ws/drift_ws/log/: latest_build
drift_ws/drift_ws/src/drift_robot/: CMakeLists.txt  README.md
drift_ws/drift_ws/src/drift_robot/docs/: APPROACH.md
drift_ws/drift_ws/src/drift_robot/launch/: simulation.launch.py
drift_ws/drift_ws/src/drift_robot/scripts/Copies/mar 22/: pick_place (copy).py
drift_ws/drift_ws/src/install/: local_setup.sh  setup.sh
drift_ws/drift_ws/src/log/: latest_build
drift_ws/install/: local_setup.sh  setup.sh
drift_ws/install/drift_robot/lib/drift_robot/: navigator.py
drift_ws/install/drift_robot/share/drift_robot/: local_setup.sh  package.ps1  package.sh
drift_ws/install/drift_robot/share/drift_robot/config/: waypoint.yaml
drift_ws/install/linkattacher_msgs/share/linkattacher_msgs/: package.sh
drift_ws/install/ros2_linkattacher/share/ros2_linkattacher/: package.sh
drift_ws/log/: latest_build
drift_ws/src/drift_robot/: package.xml  setup.py
drift_ws/src/drift_robot/launch/: simulation.launch.py
drift_ws/src/drift_robot/scripts/: navigator.py  pick_place.py
drift_ws/src/drift_robot/urdf/: drift_robot.urdf.xacro
drift_ws/src/drift_robot/worlds/: home.world
(+34 files in other folders)
